--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,9 +17,18 @@ security:
             lazy: true
             provider: app_user_provider
             custom_authenticator: App\Security\LoginAppAuthenticator
+            logout:
+                path: /logout
+                invalidate_session: true
+                clear_site_data:
+                    - cookies
+                    - storage
+                    
+
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
+            # invalidate_session: true  # Efface la session 
 
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
