--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -18,8 +18,13 @@ framework:
     php_errors:
         log: true
 
+    profiler:
+        enabled: false
+
 when@test:
     framework:
         test: true
         session:
             storage_factory_id: session.storage.factory.mock_file
+    profiler:
+        enabled: false
